# online_store_sneakers

./: .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
store/api/: serializers.py  tasks.py  tests.py  urls.py  views.py
store/api/serializers/: clients.py  product.py
store/api/tests/: data.py  test_api_xrapid.py  test_clients.py  test_products.py
store/api/views/: clients.py  products.py
store/apps/news/: admin.py  models.py
store/apps/news/migrations/: 0001_initial.py  0002_alter_newsblog_options_remove_newsblog_description_and_more.py  0003_newsblog_updated_at.py  0004_newsblog_image_alter_newsblog_created_at_and_more.py
store/apps/shop/: admin.py  models.py  urls.py  views.py
store/apps/shop/migrations/: 0001_initial.py
store/apps/shop/templates/: all_items.html  base.html  contact.html  home.html  item_detail.html
store/apps/shop_app/: admin.py  data.py  models.py  urls.py  views.py
store/apps/shop_app/migrations/: 0001_initial.py  0002_alter_product_name.py  0003_alter_payment_payment_method.py  0004_alter_product_token_product.py
store/apps/shop_app/rapidapi/: receive_data.py  sneakers_db_update.py
store/apps/shop_app/templates/: base.html  index.html  item_detail.html
store/config/: celery.py  celery_config.py  settings.py  urls.py
store/utils/: sneakers_db_update.py
